hphp/hack/test/typecheck/interface_use_trait.php
<?hh // partial
trait Hello {}
interface I {
  use Hello;
}
